# rtems-ntp-nanokernel

./: ChangeLog  Makefile  Makefile.am  Makefile.host  README  gauss.c  jitter.c  kern.c  kern.h  kern.sh  ktime.c  l_fp.h  micro.c  noise.c  noise.sh  pcc-host.h  pcc.h  pictimer.c  pictimer.h  profile.c  rtemsdep.c  rtemsdep.h  rtemssim.c  test.sh  timex.h
alpha/: ppsapi.c  timepps.h
freebsd/: timex.h
html/: api.htm  changes.htm  descrip.htm  implem.htm  index.htm  proof.htm  theory.htm  util.htm
html/scripts/: footer.txt  header.txt  style.css
solaris/: timepps.h
sunos/: ppsapi.c  timepps.h  timex.h
